test/expressions/noinit/namingConflict.chpl
var noinit = "shouldn't work";
writeln(noinit);
